<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:elevation="5dp"
    android:focusable="true"
    android:orientation="horizontal"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="80"
        android:orientation="vertical"
        android:paddingBottom="7dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="7dp">
        <TextView
            android:id="@+id/detailsName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="Name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:minHeight="25px"
        android:minWidth="25px"
        android:orientation="vertical"
        android:paddingRight="5dp"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:clickable="false" />
    </LinearLayout>
</LinearLayout>