<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">History in Paderborn</string>
    <string name="title_activity_main">History in Paderborn</string>
    <string name="title_activity_display_single_image">Detailansicht</string>
    <string name="title_activity_display_image_slider">Zeitachsenansicht</string>
    <string name="title_activity_route">Routen</string>
    <string name="title_activity_route_filter">Routenfilter</string>

...
